syntax = "proto3";
option java_multiple_files = true;
package com.mynotes.grpc.demo;

message AuthorRequest {
    int32 id= 1;
}

message PostsRequest {
    int32 limit= 1;
}

message Author {
   int32 id= 1;
   string fname= 2;
   string lname= 3;
   string email= 4;
   string dob = 5;

}

message Post {
   int32 id= 1;
   int32 authorId= 2;
   string title= 3;
   string description= 4;
   string content= 5;
   string date = 6;

}

service BlogService {

    rpc findAuthor(AuthorRequest) returns (Author);

    rpc findAuthorStream(stream AuthorRequest) returns (stream Author);

    rpc posts(PostsRequest) returns (stream Post);
}